--- a/ShoppingCart.Web/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart.Web/Views/Shared/_Layout.cshtml
@@ -21,9 +21,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                    <li class="active">@{Html.RenderAction("CartSummary", "ShoppingCart");}</li>
                 </ul>
+
             </div>
         </div>
     </div>
