--- a/ShoppingCart.Web/Views/Products/Details.cshtml
+++ b/ShoppingCart.Web/Views/Products/Details.cshtml
@@ -34,6 +34,14 @@
             @Html.DisplayFor(model => model.inStock)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
     </dl>
 </div>
 <p>
